--- a/2_CSS3/css/02_selector2.css
+++ b/2_CSS3/css/02_selector2.css
@@ -1,14 +1,14 @@
-/* 
-    CSS파일
+/* CSS파일
     - 파일 전체가 style 태그 <style>의 내부
 */
 
-/* 기본 속성 선택자( [태그][속성명="속성값"] ) */
 
+
+/* 기본 속성 선택자( [태그][속성명="속성값"] ) */
 div[name="name-1"] { background-color:  orange; }
 p[name='name-1'] { background-color: green; } 
-
 [name=name-2] {background-color :  blue;} 
+/* "속성값"에서 쌍따옴표("")는 홑따옴표로 사용하거나 생략 가능 */
 
 .test-1[name='name-2'] {color : white;}
 /* 클래스가 test-1인 요소 중 name속성 값이 name-2인 요소 선택 */
@@ -19,9 +19,7 @@ p[name='name-1'] { background-color: green; }
 /* 자식 선택자(>) */
 /* id가 parent-ul인 요소의 자식 중 li 태그 모두 선택 */
 #parent-ul > li { background-color: orange;} 
-
 #parent-ul > .test-2 { background-color: pink; }
-
 #parent-ul > li > span{ background-color: yellow; }
 #parent-ul > li > .test-2{ color: red; } 
 
@@ -38,7 +36,7 @@ p[name='name-1'] { background-color: green; }
 
 
 /* 후손 선택자 + 모든 요소 선택자 */
-#test-div * { font-family: '굴림'; }
+#test-div * { font-family: '휴먼둥근헤드라인'; }
 
 
 
@@ -49,7 +47,7 @@ p[name='name-1'] { background-color: green; }
     border : 3px solid black;
     background-color: yellow;
 
-    margin-bottom: 20px; /* 아래쪽으로 20px간격 */
+    margin-bottom: 20px; /* 아래쪽으로 20px여백 */
     cursor: pointer; /* 요소에 마우스 커서를 올리면 손가락 모양아이콘 생성 */
 }
 
@@ -96,7 +94,10 @@ input[name="fruits"]:checked{
 #test-div2 > input:enabled { background-color: yellowgreen; }
 
 /* 비활성화 된 상태의 요소를 선택하는 :disabled */
-#test-div2 > input:disabled { background-color: lightslategray; }
+#test-div2 > input:disabled { 
+    background-color: lightslategray; 
+    color:white;
+}
 
 
 
@@ -117,30 +118,29 @@ input[name="fruits"]:checked{
     width : 30px;
     height : 30px;
     border : 1px solid black;
-    /* label은 기본적으로 inline형식 - > 크기 조정 불가 */
-
-    
-    display: inline-block; /* 수평분할 + 크기조정 0 */
+    /* label은 기본적으로 inline형식 - > 크기 조정 불가
+        label은 형식을 변경해야한다!! */
+    display: inline-block; /* inline수평분할 + block크기조정가능 */
     cursor: pointer;
-    border-radius: 15%; /* 모서리 라운딩 */
+    border-radius: 20%; /* 모서리 라운딩 */
 }
 
 /* 체크된 체크박스 뒤에 있는 label 태그 스타일 지정 */
 .chk:checked + label {
     background-image: url(../../images/check.png); /* 배경이미지 */
     background-repeat: no-repeat; /* 배경반복X */
-    background-size : 26px; /* 배경 이미지 크기 */
-    background-position: -1px 4px; /* 이미지 위치(x,y) */
+    background-size : 28px; /* 배경 이미지 크기 */
+    background-position: -1px 2px; /* 이미지 위치(x,y) */
                     /* 왼쪽으로 1px이동, 아래로 4px이동 */ 
 }
 
 
-/* checkbox가 존재하지만 보여지 않도록 처리 */
+/* 실제 checkbox를 보이지 않도록 처리 */
 .chk{
     display: none;
 }
 
 
 .test4{
-    font-size: 30px;
+    font-size: 25px;
 }
