--- a/2_CSS3/css/14_flexbox1.css
+++ b/2_CSS3/css/14_flexbox1.css
@@ -13,18 +13,19 @@
     */
 
 
+    
+    /************************************************************************/
     /* flex-direction 
         - 중심축 main-axis의 방향과 시작 위치를 지정하는 속성
-        - 가로 방향(행) == 기본값
-          가로 역방향
-          세로 방향(열)
-          세로 역방향 */
-    /* flex-direction: row-reverse; */
-    /* flex-direction: column; */
-    /* flex-direction: column-reverse; */
+        flex-direction: row;             가로 방향(행) == 기본값
+        flex-direction: row-reverse;     가로 역방향
+        flex-direction: column;          세로 방향(열)
+        flex-direction: column-reverse;  세로 역방향 */
     flex-direction: row;
 
 
+
+    /************************************************************************/
     /* flex-wrap 
         - 내부 item들을 포장하는 속성
         - item들이 강제로 한 줄에 배치되게 할 것인지 
@@ -40,11 +41,11 @@
     flex-wrap : wrap-reverse;
 
 
-    /**********************************/
-    /************ flex-flow************/
-    /**********************************/
-    /* flex-direction과 flex-wrap을 한번에 지정하는 속성
-     -> 왜 사용하는가?
+
+    /************************************************************************/
+    /* flex-flow
+      -> flex-direction과 flex-wrap을 한번에 지정하는 속성
+      -> 왜 사용하는가?
         flex설계 시 가장 기본이 되는 설정이기 때문에 둘을 한 번에 지정하는 속성이 존재 */
 
     flex-flow: row nowrap;
@@ -52,11 +53,10 @@
 
 
 
-    /************************************/
-    /********* justify-content **********/
-    /************************************/
+
+    /************************************************************************/
     /* justify-content : 내용을 조정하다
-        -> main-axis 방향으로 내용(item)을 정렬하는 방법을 조정하는 속성 */
+      -> main-axis 방향으로 내용(item)을 정렬하는 방법을 조정하는 속성 */
 
     /* 중심축 설정 */
     /* flex-direction: row-reverse; */
@@ -80,10 +80,10 @@
     /* space-between : 양 끝의 item을 main-axis 시작/종료 지점에 붙인 상태에서 동일한 간격을 가지게 지정 */
     justify-content: space-between;
 
-    
-    /************************************/
-    /************ align-items ***********/
-    /************************************/
+
+
+
+    /************************************************************************/
     /* align-items : main-axis에 정렬된 item들을 
                 교차축인 cross-axis방향으로 정렬하는 방법을 지정하는 속성 */
     
