--- a/2_CSS3/css/15_flexbox2.css
+++ b/2_CSS3/css/15_flexbox2.css
@@ -5,8 +5,10 @@
 
     display: flex;
 
+
+    
     /********************************************************************************/
-    /********* flex-wrap ***********/
+    /* flex-wrap */
     flex-wrap: wrap;
     /* item의 크기가 변하지 않고 
     mian-axis방향으로 item이 초과하게 되면 다음줄로 이동 */
@@ -14,8 +16,8 @@
 
 
     /********************************************************************************/
-    /********* align-content ***********/
-    /* 
+    /* align-content
+
         item이 포장된 한 줄을 단위로 하여 
         cross-axis방향으로 정렬(배치)하는 방법 
     
@@ -27,7 +29,6 @@
         - space-evenly  : item이 포장된 한 줄에 cross-axis방향으로 동일한 크기의 공간을 나누어 배치
         - space-between : item이 포장된 한 줄에 cross-axis 시작/끝지점에 붙어있게 하고
                           나머지에 동일한 크기의 공간을 나누어 배치
-
     */
     align-content: space-between;
 
